--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@ethersproject/wallet": "^5.7.0",
     "@tanstack/react-query": "^4.10.3",
     "@xmtp/proto": "^3.4.0",
-    "@xmtp/xmtp-js": "^7.0.1",
+    "@relaycc/xmtp-js": "0.1.7",
     "buffer": "^6.0.3",
     "comlink": "^4.3.1",
     "encoding": "^0.1.13",
