--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -c -w",
-    "dev": "npm link ../xmtp-js && npm run watch",
+    "dev": "npm run watch",
+    "dev:xmtp": "npm link ../xmtp-js && npm run watch",
     "lint": "eslint src/",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier . --write",
@@ -53,9 +54,9 @@
     "@ethersproject/address": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
     "@ethersproject/wallet": "^5.7.0",
+    "@relaycc/xmtp-js": "^0.1.8",
     "@tanstack/react-query": "^4.10.3",
     "@xmtp/proto": "^3.4.0",
-    "@relaycc/xmtp-js": "0.1.7",
     "buffer": "^6.0.3",
     "comlink": "^4.3.1",
     "encoding": "^0.1.13",
